# student-calculator

./: README.md  student_calc
v0.1/: Student.cpp  Student.h  main.cpp  student_calc
v0.1/Students.txt/: students100000.txt  students1000000.txt
v0.2/: CMakeLists.txt  Student.cpp  Student.h  Students_100000.txt  Students_1000000.txt  results_1000000_failed.txt  results_1000000_passed.txt  results_100000_failed.txt  results_100000_passed.txt  results_10000_failed.txt  results_10000_passed.txt  student_calc  students_10000.txt
v0.2/Students.txt/: students10000.txt
v0.2/include/: FileGenerator.h  IOManager.h  Student.h  Timer.h
v0.2/src/: Generator.cpp  IOManager.cpp  Student.cpp  StudentManager.cpp  main.cpp
v0.25/: .gitignore  CMakeLists.txt  student_v02  student_v025
v0.25/include/: Exceptions.h  Generator.h  IOManager.h  StudentManager.h  Timer.h  Utils.h
v0.25/src/: FileGenerator.cpp  Student.cpp  main.cpp
v1.0/: CMakeLists.txt  README.md
v1.0/include/: FileGenerator.h  StudentManager.h  Utils.h
v1.0/src/: FileGenerator.cpp  Student.cpp  StudentManager.cpp  main.cpp
